# dummyRPG

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: cmake.yml
doc/: contributing.md  file-format.md  install.md  specifications.md
dummyRPG/: CMakeLists.txt
dummyRPG/include/dummyrpg/: character.hpp  dialog.hpp  dummy_types.hpp  floor.hpp  game.hpp  item.hpp  layer.hpp  map.hpp  monster.hpp  serialize.hpp  sprite.hpp
dummyRPG/src/: character.cpp  dialog.cpp  floor.cpp  game.cpp  item.cpp  map.cpp  monster.cpp  serialize.cpp
dummyRPG/tests/: main_tests.cpp
include/: utils.hpp
include/dummyrpg/: dummy_types.hpp  floor.hpp  layer.hpp  map.hpp
player/: CMakeLists.txt
player/Resources/: tilemap.frag  tilemap.vert
player/Resources/images/: sources.txt
player/include/: CharacterRender.hpp  ControlGame.hpp  ControlPlayer.hpp  GameRender.hpp  Keymap.hpp  MapRender.hpp  RenderCharacter.hpp  RenderDialog.hpp  RenderGame.hpp  RenderMap.hpp
player/src/: CharacterRender.cpp  ControlGame.cpp  ControlPlayer.cpp  GameRender.cpp  MapRender.cpp  RenderCharacter.cpp  RenderDialog.cpp  RenderGame.cpp  RenderMap.cpp  main.cpp  player.cpp  testPlayer.cpp
src/: map.cpp
tests/: main_tests.cpp
